[package]
name = "phymmr-dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phymmr_dedup"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
fasthash = "*"
rayon = "1.5"
lazy_static = "*"
hashbrown = { version = "0.12.3", features = ["rayon"]}
bio = "1.0.0"