[package]
name = "phymmr-dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phymmr_dedup"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
fasthash = "*"
rayon = "1.5"
lazy_static = "*"
bio = "1.0.0"
crossbeam-channel = "0.5"
waker-fn = "1.1.0"
threadpool = "1.8.1"
hashbrown = { version = "0.11.2", features = ["rayon"] }
parking_lot = "0.12.1"